scripts/demo/schema/force-app/main/default/objects/Demo_Property__c/Demo_Property__c.object-meta.xml
<CustomObject>
    <label>Demo Property</label>
    <pluralLabel>Demo Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Listing Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>