scripts/demo/schema/force-app/main/default/objects/Demo_Property__c/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <label>Bathrooms</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>1</scale>
</CustomField>