scripts/demo/schema/force-app/main/default/objects/Demo_Property__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <label>Bedrooms</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>