scripts/demo/schema/force-app/main/default/objects/Demo_Property__c/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <label>Buyer Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>