scripts/demo/schema/force-app/main/default/objects/Demo_Property__c/fields/Lot_Size__c.field-meta.xml
<CustomField>
    <fullName>Lot_Size__c</fullName>
    <label>Lot Size</label>
    <type>Text</type>
    <length>50</length>
</CustomField>