scripts/demo/schema/force-app/main/default/objects/Demo_Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Multi-Family</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>