scripts/demo/schema/force-app/main/default/objects/Demo_Property__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <label>Sale Price</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>