scripts/demo/schema/force-app/main/default/objects/Demo_Property__c/fields/Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Square_Feet__c</fullName>
    <label>Square Feet</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>