scripts/demo/schema/force-app/main/default/objects/Demo_Property__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Text</type>
    <length>50</length>
</CustomField>