scripts/demo/schema/force-app/main/default/objects/Demo_Property__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <label>Year Built</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>